# crr-radar

./: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: nightly.yml  pages.yml
api/: .env.example  feedback.js
config/: deadlines.yaml  quiz.yaml  references.yaml  sources.yaml
data/: crr_radar.db
docs/: ROADMAP.md
feedback/: README.md
scripts/: local-server.cjs  test-feedback.cjs
site/: app.js  calendar.js  feedback-config.js  feedback.js  index.html  quiz.js  styles.css
site/data/: deadlines.json  items.json  quiz.json
src/crr_radar/: __init__.py  classify.py  cli.py  config.py  export.py  fetch.py  llm.py  pipeline.py  prompts.py  review.py  store.py
tests/: test_store.py
