[project]
name = "crr-radar"
version = "0.1.0"
description = "Nightly radar for EU CRR/CRR3 credit risk regulatory developments"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.9",
    "anthropic>=0.40",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
crr-radar = "crr_radar.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
